--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e ,js,hbs"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,9 @@
     "request": "^2.88.0",
     "yargs": "^13.2.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Buckoge/node3-weather-webserver.git"
